typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration6.ts.stderr
error: UndefinedSymbol {
    sym: Atom('A' type=inline),
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            17,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration6.ts:1:17
  |
1 | class C extends A, B {
  |                 ^

error: TS1174
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration6.ts:1:20
  |
1 | class C extends A, B {
  |                    ^

